some fixing